--- a/Assignment2/about.html
+++ b/Assignment2/about.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
     <style>
         * {
@@ -100,6 +101,7 @@
             font-size: 18px;
             color: white;
         }
+        
     </style>
 </head>
 <body>
