--- a/Assignment2/about.html
+++ b/Assignment2/about.html
@@ -101,6 +101,18 @@
             font-size: 18px;
             color: white;
         }
+        /* Media queries for responsiveness */
+        @media (max-width: 768px) {
+            .form-container {
+                width: 100%;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .form-container {
+                width: 100%;
+            }
+        }
         
     </style>
 </head>
