--- a/Assignment2/blog.html
+++ b/Assignment2/blog.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         
         /* Style the header, footer, nav and main elements */
