--- a/Assignment2/onlineplantshop.html
+++ b/Assignment2/onlineplantshop.html
@@ -134,6 +134,19 @@
             font-size: 18px;
             color: white;
         }
+         /* Media queries for responsiveness */
+        @media (max-width: 768px) {
+            .form-container {
+                width: 100%;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .form-container {
+                width: 100%;
+            }
+        }
+        
     </style>
 </head>
 <body>
