--- a/Assignment2/animation.html
+++ b/Assignment2/animation.html
@@ -118,6 +118,32 @@
             transform: translateY(0);
             opacity: 1;
         }
+         .footer {
+           position: fixed;
+           left:0;
+           bottom:0;
+           width:100%;
+           background-color: black;
+           color:white;
+           text-align: center;
+          }
+
+        .footer-text {
+            font-size: 18px;
+            color: white;
+        }
+        /* Media queries for responsiveness */
+        @media (max-width: 768px) {
+            .form-container {
+                width: 100%;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .form-container {
+                width: 100%;
+            }
+        }
     </style>
 </head>
 <body>
