--- a/Assignment2/home.html
+++ b/Assignment2/home.html
@@ -15,6 +15,11 @@
             margin: 0;
             padding:0;
         }
+        . container {
+            display:grid;
+            grid-template-columns:1fr 2fr 1fr;
+            grid-gap:10px;
+            }
 
         .header {
             background-color: #4CAF50;
