--- a/Assignment2/home.html
+++ b/Assignment2/home.html
@@ -115,6 +115,10 @@
            color:white;
            text-align: center;
           }
+        @media screen and(max-width:600px)
+        {
+            body{font-size: 14px;
+        }}
     </style>
 </head>
 <body>
