--- a/Assignment2/about.html
+++ b/Assignment2/about.html
@@ -9,6 +9,7 @@
             box-sizing: border-box;
             margin: 0;
             padding: 0;
+            
         }
 
         .container {
@@ -28,6 +29,7 @@
             font-size: 36px;
             padding: 20px;
             text-align: center;
+            width:100%;
         }
        
         /* Style the navigation bar */
