--- a/Assignment2/about.html
+++ b/Assignment2/about.html
@@ -108,18 +108,12 @@
             font-size: 18px;
             color: white;
         }
-        /* Media queries for responsiveness */
-        @media (max-width: 768px) {
-            .form-container {
-                width: 100%;
-            }
+        @media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  [class*="col-"] {
+    width: 100%;
+  }
         }
-
-        @media (max-width: 480px) {
-            .form-container {
-                width: 100%;
-            }
-    }
         
     </style>
 </head>
