--- a/Assignment2/about.html
+++ b/Assignment2/about.html
@@ -16,6 +16,8 @@
             max-width: 100%;
             margin: 0;
             padding:0;
+        }
+        . container {
             display:grid;
             grid-template-columns:1fr 2fr 3fr;
             grid-gap:10px;
