--- a/Assignment2/about.html
+++ b/Assignment2/about.html
@@ -19,8 +19,8 @@
         }
         . container {
             display:grid;
-            grid-template-columns:1fr 2fr 3fr;
-            grid-gap:10px;
+            grid-template-columns: repeat (2,1fr);
+            grid-gap:20px;
         }
     
 
