--- a/Assignment2/about.html
+++ b/Assignment2/about.html
@@ -33,7 +33,7 @@
         /* Style the header */
         header {
             width:100%;
-            background-color: #04AA6D;
+            background-color: green;
             color: white;
             padding: 20px;
             text-align: center;
