--- a/Assignment2/about.html
+++ b/Assignment2/about.html
@@ -17,6 +17,9 @@
             margin: 0;
             padding:0;
         }
+        .container{
+            grid-template-columns:repeat(2,1fr);
+        }
 
         .header {
             background-color: #4CAF50;
