--- a/Assignment2/about.html
+++ b/Assignment2/about.html
@@ -18,8 +18,11 @@
             padding:0;
         }
         .container{
-            grid-template-columns:repeat(2,1fr);
+            display:grid;
+            grid-template-columns:1fr 2fr 1fr;
+            grid-gap:10px;
         }
+        
 
         .header {
             background-color: #4CAF50;
