--- a/Assignment2/about.html
+++ b/Assignment2/about.html
@@ -19,7 +19,7 @@
         }
         .container{
             display:grid;
-            grid-template-columns:1fr 2fr 1fr;
+            grid-template-rows:1fr 2fr 1fr;
             grid-gap:10px;
         }
         
