--- a/Assignment2/home.html
+++ b/Assignment2/home.html
@@ -17,7 +17,7 @@
         }
         . container {
             display:grid;
-            grid-template-columns:1fr 2fr 1fr;
+            grid-template-columns:repeat(2,1fr);
             grid-gap:10px;
             }
 
