--- a/Assignment2/home.html
+++ b/Assignment2/home.html
@@ -115,10 +115,30 @@
            color:white;
            text-align: center;
           }
-        @media screen and(max-width:600px)
-        {
-            body{font-size: 14px;
-        }}
+        /* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  /* CSS rules */
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  /* CSS rules */
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  /* CSS rules */
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  /* CSS rules */
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  /* CSS rules */
+}
     </style>
 </head>
 <body>
