--- a/Assignment2/logup.html
+++ b/Assignment2/logup.html
@@ -227,6 +227,24 @@
         const signupForm = document.getElementById("signup-form");
         const showSignupForm = document.getElementById("show-signup-form");
         const showLoginForm = document.getElementById("show-login-form");
+         <script>
+        // Get the form elements
+        const loginForm = document.getElementById("login-form");
+        const signupForm = document.getElementById("signup-form");
+        const showSignupForm = document.getElementById("show-signup-form");
+        const showLoginForm = document.getElementById("show-login-form");
+        function validate() {
+            var password = document.getElementById("password").value;
+            var confirmPassword = document.getElementById("retype_password").value;
+
+            if (password === confirmPassword) {
+                // Passwords match
+                return true;
+            } else {
+                alert("Passwords do not match. Please try again.");
+                return false;
+            }
+        }
 
         // Add event listeners for switching forms
         showSignupForm.addEventListener("click", function() {
